tool_library_deployment_no_auth_copy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adam-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: adam-test
  name: tool-library-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tool-library-app
  template:
    metadata:
      labels:
        app: tool-library-app
    spec:
      containers:
      - name: tool-library-container
        image: python:3.8-slim
        ports:
        - containerPort: 8000
        command: ["/bin/sh", "-c"]
        args:
        - |
          apt-get update && apt-get install -y git
          ls
          git clone https://github.com/kalavai-net/tool_library.git /app/tool-library
          cd /app/tool-library
          git checkout feature/https
          # torch CPU
          pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
          pip install transformers tqdm numpy scikit-learn scipy nltk sentencepiece
          pip install --no-deps sentence-transformers==2.2.2
          pip install -e .
          uvicorn tool_library.api:app --host 0.0.0.0 --port 8000
        resources:
          limits:
            cpu: 2
            memory: "4Gi"
          requests:
            cpu: 2 # must accommodate num-cores requested for execution
            memory: "4Gi" # must accommodate for the tool's weights
        volumeMounts:
        - name: tool-library-storage
          mountPath: "/tool"
      restartPolicy: Always
      volumes:
      - name: tool-library-storage
        persistentVolumeClaim:
          claimName: tool-library-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: tool-library-service
  namespace: adam-test
  labels:
    app: tool-library-app
spec:
  type: ClusterIP
  selector:
    app: tool-library-app
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tools-library-ingress
  namespace: adam-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    # Add a DNS record to match this URL to the IP of the cluster
    - host: tools-adam-test.test.k8s.mvp.kalavai.net
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: tool-library-service
                port:
                  number: 80
            path: /
  tls:
  - hosts:
    - tools-adam-test.test.k8s.mvp.kalavai.net
    secretName: tools-adam-test.test.k8s.mvp.kalavai.net-tls
